added and fixed user service, now student or actor bring the programs details (code, name)